# rokey_proj_01

./: .gitignore  README.md  report.md
.claude/: settings.local.json
docs/: integration-guide.md  lego-robot-presentation.html  lego-robot-presentation.pptx  sequencer-ppt.html  sequencer-ppt.pptx  sequencer-spec.md
docs/plans/: 2026-06-27-webcam-block-checker.md
docs/specs/: 2026-06-27-webcam-block-checker-design.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/cobot1/lib/cobot1/: bridge_node  camera_node  image_processor_node  robot_controller_node  sequencer_node  verify_node  webcam_node
install/cobot1/share/cobot1/: package.sh  package.xml
install/cobot1/share/cobot1/config/: front_camera_info.yaml  usb_camera.yaml  vision.yaml
install/cobot1/share/cobot1/launch/: assembly.launch.py
install/cobot1_interfaces/share/cobot1_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/cobot1_interfaces/share/cobot1_interfaces/action/: Assembly.action  Assembly.idl
install/cobot1_interfaces/share/cobot1_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  cobot1_interfacesConfig-version.cmake  cobot1_interfacesConfig.cmake  cobot1_interfaces__rosidl_typesupport_cExport-noconfig.cmake  cobot1_interfaces__rosidl_typesupport_introspection_cExport.cmake  export_cobot1_interfaces__rosidl_generator_cppExport.cmake  export_cobot1_interfaces__rosidl_generator_pyExport-noconfig.cmake  export_cobot1_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  export_cobot1_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  (+1 more)
lego_assembler/: requirements.txt
lego_assembler/config/: colors.yaml  robot.yaml
lego_assembler/gui/: app.py
lego_assembler/gui/static/: main.js  style.css
lego_assembler/gui/templates/: index.html
log/: latest_build
rokey_project_01/flask_app/templates/: index.html
rokey_project_01/rokey_project_01/: package.xml  setup.cfg  setup.py
rokey_project_01/rokey_project_01/config/: image_processor.yaml  verify.yaml
rokey_project_01/rokey_project_01/launch/: assembly.launch.py
rokey_project_01/rokey_project_01/rokey_project_01/: bridge_node.py  camera_node.py  db.py  image_processor_node.py  process_mosaic_cli.py  robot_controller_node.py  sequencer_node.py  verify_cli.py  verify_node.py  webcam_node.py
rokey_project_01/rokey_project_01/rokey_project_01/vision_core/: config.py  grid_projection.py
rokey_project_01/rokey_project_01_interfaces/: CMakeLists.txt  package.xml
rokey_project_01/rokey_project_01_interfaces/msg/: BlockModel.msg  Mismatch.msg
rokey_project_01/rokey_project_01_interfaces/srv/: ProcessMosaic.srv  SequencePlan.srv  VerifyAssembly.srv
scripts/: roi_check.py
src/cobot1/: package.xml  setup.py
src/cobot1/cobot1/: bridge_node.py  camera_node.py  force_monitor_node.py  image_processor_node.py  robot_controller_node.py  sequencer_node.py  spiral_detach_discard.py  verify_node.py  webcam_checker_node.py  webcam_node.py
src/cobot1/cobot1/vision_core/: __init__.py  config.py  geometry.py  grid_projection.py  models.py  mosaic.py  overlay.py  palette.py  verification.py
src/cobot1/cobot1/vision_core/segmentation/: __init__.py  factory.py  opencv_components.py  ultralytics_backend.py
src/cobot1/config/: front_camera_info.yaml  image_processor.yaml  usb_camera.yaml  verify.yaml  vision.yaml  vision_ultralytics_template.yaml
src/cobot1/launch/: assembly.launch.py
src/cobot1/test/: test_webcam_checker.py
src/cobot1_interfaces/: CMakeLists.txt
src/cobot1_interfaces/action/: Assembly.action  ExecuteQueue.action
src/cobot1_interfaces/msg/: AssemblyTask.msg  BlockCell.msg  BlockModel.msg  BlockTask.msg  Mismatch.msg  WebcamError.msg
src/cobot1_interfaces/srv/: CheckBlock.srv  ProcessMosaic.srv  SequencePlan.srv  VerifyAssembly.srv
src/flask_app/: app.py
src/flask_app/static/: main.js  style.css
src/flask_app/templates/: edit.html  index.html  progress.html
src/qt_app/: main.py  requirements.txt
tools/: build_config.py  roi_check.py  test_drfl_second_conn.py
ws_cobot1/: .gitignore
ws_cobot1/output/: model.json
ws_cobot1/output/try1/: model.json
ws_cobot1/src/: README.md  requirements-ml.txt
ws_cobot1/src/image_processor_node/: package.xml  setup.py
ws_cobot1/src/image_processor_node/image_processor_node/: node.py  process_mosaic_cli.py
ws_cobot1/src/verify_node/: package.xml  setup.cfg  setup.py
ws_cobot1/src/verify_node/verify_node/: node.py  verify_cli.py
ws_cobot1/src/vision_camera_bringup/: CMakeLists.txt  package.xml
ws_cobot1/src/vision_camera_bringup/launch/: vision_nodes.launch.py  vision_system.launch.py
ws_cobot1/src/vision_core/: package.xml  setup.cfg  setup.py
ws_cobot1/src/vision_core/test/: test_geometry.py  test_instance_projection.py  test_opencv_segmenter.py  test_verification.py
ws_cobot1/src/vision_core/vision_core/: mosaic.py  overlay.py
ws_cobot1/src/vision_core/vision_core/segmentation/: base.py
ws_cobot1/src/vision_interfaces/: CMakeLists.txt  package.xml
ws_cobot1/src/vision_interfaces/msg/: BlockModel.msg  Mismatch.msg  SegmentationInstance.msg
ws_cobot1/src/vision_interfaces/srv/: ProcessMosaic.srv  VerifyAssembly.srv
(+138 files in other folders)
