<?xml version="1.0"?>
<package format="3">
  <name>verify_node</name>
  <version>0.2.0</version>
  <description>Front-camera relay and instance-segmentation completed-assembly verification service.</description>
  <maintainer email="team@example.com">assembly team</maintainer>
  <license>Apache-2.0</license>


  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>vision_interfaces</depend>
  <depend>vision_core</depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
