<?xml version="1.0"?>
<package format="3">
  <name>vision_camera_bringup</name>
  <version>0.2.0</version>
  <description>Launch and deployment configuration for the front camera and instance-segmentation vision nodes.</description>
  <maintainer email="team@example.com">assembly team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>image_processor_node</exec_depend>
  <exec_depend>verify_node</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
