<?xml version="1.0"?>
<package format="3">
  <name>vision_core</name>
  <version>0.2.0</version>
  <description>ROS-independent instance segmentation, grid projection, camera geometry and verification algorithms.</description>
  <maintainer email="team@example.com">assembly team</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-pip</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
