<?xml version="1.0"?>
<package format="3">
  <name>vision_interfaces</name>
  <version>0.2.0</version>
  <description>Instance-segmentation messages and services for block mosaic generation and assembly verification.</description>
  <maintainer email="team@example.com">assembly team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
